--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VNP_TMN_CODE="8SOXFP9S"
+VNP_HASH_SECRET="XPCNPLODGAWMGPPCNBMKTITNBBHQQKNC"
+VNP_APIURL="http://sandbox.vnpayment.vn/merchant_webapi/merchant.html"
+VNP_URL="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+VNP_RETURNURL="http://127.0.0.1:8000/returnpayment"
